@@ -21,6 +21,8 @@ ChangeLog for wpa_supplicant
 	* updated userspace MLME instructions to match with the current Linux
 	  mac80211 implementation; please also note that this can only be used
 	  with driver_nl80211.c (the old code from driver_wext.c was removed)
+	* added support (Linux only) for RoboSwitch chipsets (often found in
+	  consumer grade routers); driver interface 'roboswitch'
 
 2008-11-01 - v0.6.5
 	* added support for SHA-256 as X.509 certificate digest when using the
